[package]
name = "wayland-rsolutions"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
smithay-client-toolkit = "0.19.2"
wayland-client = "0.31.6"
wayland-protocols = { version = "0.32.4", features = ["client", "unstable"] }
